2006-11-30  Andy Wingo  <wingo@pobox.com>

	* flumotion/ui/url.py (ClickyURL): New file, implementing a clicky
	URL.

	* flumotion/ui/glade.py (GladeWindow): Clean up a bit.
	
	* flumotion/ui/glade.py (GladeWindow.__init__): Put the window in
	the widgets dict also.
	(GladeWindow.__connect_interesting_signals): Add a delicious hack
	whereby if the object has set self.interesting_signals, we
	autoconnect some signal handlers.
	(GladeWindow.connect_signal): New proc, connects a widget to a
	conventionally-named signal handler.

2006-11-28  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/base/admin_gtk.py (StateWatcher)
	(PlumbingAdminGtkNode.addFeeder)
	(PlumbingAdminGtkNode.addFeederClient)
	(PlumbingAdminGtkNode.removeFeederClient)
	(PlumbingAdminGtkNode.setUIState): Expect a list key instead of a
	dict key.

	* flumotion/component/feedcomponent010.py (Feeder.__init__)
	(Feeder.addClient, Feeder.removeClient, FeedComponent.init)
	(FeedComponent.do_setup): Use list keys instead of dict keys for
	now, making migration a bit easier.

	* flumotion/twisted/flavors.py (StateCacheable.setitem)
	(StateCacheable.delitem): Rename from dictSet/dictRemove to be
	more consistent with python's dicts.

	* flumotion/twisted/flavors.py (StateCacheable.dictRemove): Be a
	bit more clear in the docs.

2006-11-27  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/client.py
	(Window._components_view_has_selection_cb): Make a generic admin
	UI if the component does not provide one.

	* flumotion/component/base/admin_gtk.py
	(PlumbingAdminGtkNode.setFeederClientBytesRead): Byte me

	* flumotion/component/base/plumbing.glade: 
	* flumotion/component/base/base.xml: 
	* flumotion/component/base/Makefile.am (component_DATA): Add the
	glade file.

	* flumotion/component/base/admin_gtk.py (BaseAdminGtk.setup): Add
	a "plumbing" node to all admin uis.
	(StateWatcher): Experimental class to help out with recursive
	state watching. Not really sure what to do with it tho.