@@ -1,3 +1,12 @@
+2006-12-04  Michael Smith  <msmith@fluendo.com>
+
+	* data/upgrade-to-0.3.2.xsl:
+	  When upgrading configs to 0.3.2, set version to 0.3.2
+
+	* flumotion/common/config.py:
+	  Parse version attributes, put in config, so we can use them if we
+	  want.
+
 2006-11-30  Andy Wingo  <wingo@pobox.com>
 
 	* flumotion/ui/url.py (ClickyURL): New file, implementing a clicky
